--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -22,66 +23,38 @@
     </div> -->
 
     <div class="container">
+        <div class="screen">
+            <div class="screen-content">
+                <form action="" class="loginForm" id="loginForm">
+                    <h2 class="login-title">Welcome Back</h2>
 
-        <!-- Login header-->
-        <div class="login-header">
-            <h2>Welcome Back</h2>
-            <p>Sign in to your account</p>
-        </div>
+                    <div class="login-field">
+                        <i class="login-icon fa fa-user"></i>
+					    <input type="text" class="login-input" placeholder="User name / Email">
+                    </div>
 
-        <!-- Login form-->
-        <form class="login-form" id="loginForm">
-            <div class="form-group">
-                <div class="input-wrapper">
-                    <label for="username">Username:</label>
-                    <input type="text" id="username" name="username" required>
-                    <span class="focus-border"></span>
-                </div>
-            </div>
+                    <div class="login-field">
+                        <i class="login-icon fa fa-lock"></i>
+					    <input type="password" class="login-input" placeholder="Password">
+                    </div>
 
-            <div class="form-group">
-                <div class="input-wrapper">
-                    <label for="password">Password:</label>
-                    <input type="password" id="password" name="password" required>
-                    <button type="button" class="password-toggle" id="password-toggle" aria-label="Toggle password visibility">
-                        <span class="eye-icon"></span>
+                    <button class="button login-submit" type="submit">
+                        <span class="button-text">Log In Now</span>
+                        <i class="button-icon fa fa-chevron-right"></i>
                     </button>
-                    <span class="focus-border"></span>
-                </div>
+                </form>
             </div>
 
-
-            <!-- Remember me-->
-            <div class="form-options">
-                    <label class="remember-wrapper">
-                        <input type="checkbox" id="remember" name="remember">
-                        <span class="checkbox-label">
-                            <span class="checkmark"></span>
-                            Remember me
-                        </span>
-                    </label>
-                </div>
-            </div>
-
-            <!-- Submit button-->
-            <button type="submit" class="login-btn btn">
-                <span class="btn-text">Sign in</span>
-                <span class="btn-loader"></span>
-            </button>
-
-            <div class="error-message" id="error">
-                <div class="error-icon">✓</div>
-                <h3>Login Fail!</h3>
-                <p>Invalid username or password</p>
-            </div>
-
-            <div class="success-message" id="success">
-                <div class="success-icon">✓</div>
-                <h3>Login Successful!</h3>
-                <p>Redirecting to your dashboard...</p>
-            </div>
-        </form>
+            <div class="screen-background">
+                <span class="screen-background-shape screen-background-shape4"></span>
+                <span class="screen-background-shape screen-background-shape3"></span>		
+                <span class="screen-background-shape screen-background-shape2"></span>
+                <span class="screen-background-shape screen-background-shape1"></span>
+		    </div>
+        </div>
     </div>
+
+    
 
     <script src="script.js"></script>
 </body>
