--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -42,6 +42,7 @@
                         <span class="button-text">Log In Now</span>
                         <i class="button-icon fa fa-chevron-right"></i>
                     </button>
+                    <p id="error" style="color: red; display: none;">Invalid username or password</p>
                 </form>
             </div>
 
