--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -30,12 +30,12 @@
 
                     <div class="login-field">
                         <i class="login-icon fa fa-user"></i>
-					    <input type="text" class="login-input" placeholder="User name / Email">
+					    <input type="text" id="username" name="username" class="login-input" placeholder="User name / Email">
                     </div>
 
                     <div class="login-field">
                         <i class="login-icon fa fa-lock"></i>
-					    <input type="password" class="login-input" placeholder="Password">
+					    <input type="password" id="password" name="password" class="login-input" placeholder="Password">
                     </div>
 
                     <button class="button login-submit" type="submit">
