Small update Payment Status in FE

--- a/Front-end/pay_tuition.html
+++ b/Front-end/pay_tuition.html
@@ -31,7 +31,7 @@
       <h2>📄 Student Tuition Details</h2>
       <p><strong>Name:</strong> <span id="studentName"></span></p>
       <p><strong>Amount:</strong> <span id="tuitionAmount"></span> đ</p>
-      <p><strong>Status:</strong> <span id="isPaid" class="status"></span></p>
+      <p><strong>Payment status:</strong> <span id="isPaid" class="status"></span></p>
       <button onclick="requestOTP()" id="payButton">Pay Tuition</button>
     </section>
 
